--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,31 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+# Mod Versions
+mod_version = 1.0.0
+artifact_minecraft_version = 1.19.2
+minecraft_version = 1.19.2
+forge_version = 43.2.4
+
+# Build Dependency Versions
+forgegradle_version = 5.1.53
+mixingradle_version = 0.7-SNAPSHOT
+mixin_version = 0.8.5
+librarian_version = 1.+
+parchment_version = 2022.11.06
+cursegradle_version = 1.4.0
+
+# Dependency Versions
+create_minecraft_version = 1.19.2
+create_version = 0.5.0.i
+create_version_build = 23
+flywheel_minecraft_version = 1.19.2
+flywheel_version = 0.6.8.a-14
+registrate_version = MC1.19-1.1.5
+create_dragon_lib_version = 1.1.2
+create_dragon_lib_version_range = [1.1.0, 1.2.0)
+jei_minecraft_version = 1.19.2
+jei_version = 11.2.0.254
+curios_minecraft_version = 1.19.2
+curios_version = 5.1.1.0
