--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 apply plugin: 'org.spongepowered.mixin'
 
+jarJar.enable()
+
 // Basic project information
 version = '1.0'
 group = 'com.excelsus.excelsior'
@@ -109,6 +111,10 @@ dependencies {
     runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_minecraft_version}-${curios_version}")
 
     annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
+
+    jarJar("com.tterrag.registrate:Registrate:${registrate_version}") {
+        jarJar.ranged(it, '[MC1.18.2-1.1.3,)')
+    }
 }
 
 // Mixin configurations
@@ -137,6 +143,7 @@ jar {
 
 // Configure build tasks
 jar.finalizedBy('reobfJar')
+tasks.jarJar.finalizedBy('reobfJarJar')
 
 // Configure publishing
 publishing {
