--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty '
 // Minecraft Forge configurations
 minecraft {
     mappings channel: 'parchment', version: "${parchment_version}-${minecraft_version}"
+    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
     runs {
         client {
