--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ parchment_version = 2022.11.06
 cursegradle_version = 1.4.0
 
 # Dependency Versions
+# View https://github.com/Creators-of-Create/Create/wiki/Depending-on-Create for more information
 create_minecraft_version = 1.19.2
 create_version = 0.5.1.b
 create_version_build = 30
